--- a/vercel.json
+++ b/vercel.json
@@ -1,51 +1,39 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/*.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "static/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/",
-      "dest": "/api/index"
-    },
-    {
-      "src": "/agenda",
-      "dest": "/api/agenda"
-    },
-    {
-      "src": "/analise",
-      "dest": "/api/analise"
-    },
-    {
-      "src": "/similaridade",
-      "dest": "/api/similaridade"
-    },
-    {
-      "src": "/api/analyze",
-      "dest": "/api/analyze"
-    },
-    {
-      "src": "/api/similarity",
-      "dest": "/api/similaridade"
-    },
-    {
-      "src": "/api/monitoring/(.*)",
-      "dest": "/api/app"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/app"
-    }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "api/*.py",
+            "use": "@vercel/python"
+        },
+        {
+            "src": "static/**/*",
+            "use": "@vercel/static"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
+            "src": "/$",
+            "dest": "/api/index.py"
+        },
+        {
+            "src": "/agenda$",
+            "dest": "/api/agenda.py"
+        },
+        {
+            "src": "/analise$",
+            "dest": "/api/analise.py"
+        },
+        {
+            "src": "/similaridade$",
+            "dest": "/api/similaridade.py"
+        },
+        {
+            "src": "/api/(.*)",
+            "dest": "/api/$1.py"
+        }
+    ]
 }
