--- a/.vercelignore
+++ b/.vercelignore
@@ -1,53 +1,18 @@
-# Python
+# Bytecode, caches
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
-# Virtual environments
+# Ambientes virtuais
 venv/
 env/
 ENV/
 
-# IDE
+# IDE e SO
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
-
-# OS
 .DS_Store
 Thumbs.db
 
 # Logs
 *.log
-
-# Arquivos de desenvolvimento
-web_app.py
-monitor_automatico.py
-consulta_personalizada.py
-exemplo_uso.py
-*.zip
-
-# Documentação de desenvolvimento
-README.md
-README_WEB.md
-CORRECOES_*.md
-FUNCIONALIDADES_*.md
