--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,36 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/api/$1.py"
+      "src": "/",
+      "dest": "/api/index.py"
+    },
+    {
+      "src": "/agenda",
+      "dest": "/api/agenda.py"
+    },
+    {
+      "src": "/analise",
+      "dest": "/api/analise.py"
+    },
+    {
+      "src": "/similaridade",
+      "dest": "/api/similaridade.py"
+    },
+    {
+      "src": "/api/analyze",
+      "dest": "/api/analyze.py"
+    },
+    {
+      "src": "/api/similarity",
+      "dest": "/api/app.py"
+    },
+    {
+      "src": "/api/monitoring/(.*)",
+      "dest": "/api/app.py"
+    },
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
     }
   ]
 }
